--- a/style.css
+++ b/style.css
@@ -15,45 +15,51 @@ body {
 }
 
 .slider {
-    margin-top: 200px;
+    margin: 0 auto;
+    width: 90vw;
+    height: 80vh;
 }
 
 .sliderWrap {
     width: 100%;
-    /* border: 10px solid #333; */
+    height: 100%;
+    border: 4px solid #333;
+    border-radius: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
 
 }
 
 .sliderContainer {
-    border: 2px solid rgba(255, 224, 224, 0.2);
+    --num: 1;
+    width: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: start;
-    width: 100%;
+    align-items: center;
     gap: 50px;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     transition: .4s linear;
     cursor: grab;
-    --num: 1;
     border-radius: 10px;
 
 }
 
 .sliderContainer::-webkit-scrollbar {
     width: 0;
+    height: 0;
+
 }
 
 .sliderItem {
+    height: 100%;
     flex: 0 0 auto;
     width: calc(100% / var(--num));
-    height: 520px;
     scroll-snap-align: end;
     display: flex;
     justify-content: center;
@@ -70,8 +76,47 @@ body {
 }
 
 .btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7em;
+    font-weight: bold;
+    background-image: linear-gradient(90deg, rgb(19, 17, 23), rgba(57, 1, 226, 1));
+    background-size: 200%;
+    color: #d4d4d4;
+    border: none;
     padding: 10px 20px;
     cursor: pointer;
+    position: absolute;
+    transition: .2s linear;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .5);
+}
+
+.btn:active {
+    color: #000;
+}
+
+
+.btn--left {
+    left: 5px;
+    background-position: 0;
+}
+
+.btn--right {
+    right: 5px;
+
+    background-position: 200%;
+}
+
+.btn--left:hover {
+    background-position: 200%;
+}
+
+.btn--right:hover {
+    background-position: 0;
 }
 
 .sliderCount {
@@ -80,4 +125,8 @@ body {
     padding: 10px;
     margin: 2px;
     border-radius: 5px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 1;
 }
