--- a/style.css
+++ b/style.css
@@ -5,25 +5,28 @@
 }
 
 :root {
-    --bgColor: #100314;
+    --bgColor: rgb(1, 96, 58);
+    --gr1: rgb(1, 96, 58);
+    --gr2: rgb(2, 176, 106);
     --color: #fefbff;
 }
 
 body {
-    background: var(--bgColor);
+    background: linear-gradient(var(--bgColor), var(--gr1), var(--gr2),
+            var(--gr1));
     color: var(--color);
 }
 
 .slider {
-    margin: 0 auto;
+    margin: 50px auto;
     width: 90vw;
     height: 80vh;
+
 }
 
 .sliderWrap {
     width: 100%;
     height: 100%;
-    border: 4px solid #333;
     border-radius: 10px;
     overflow: hidden;
     display: flex;
@@ -40,7 +43,6 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 50px;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
@@ -59,14 +61,14 @@ body {
 .sliderItem {
     height: 100%;
     flex: 0 0 auto;
-    width: calc(100% / var(--num));
+    width: 100%;
     scroll-snap-align: end;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     overflow: hidden;
-    background: radial-gradient(rgb(1, 6, 62), rgb(0, 45, 0));
+    /* background: radial-gradient(var(--gr1), var(--gr2), var(--gr1)); */
 }
 
 .sliderImg {
