--- a/style.css
+++ b/style.css
@@ -2,25 +2,32 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 :root {
     --bgColor: rgb(1, 96, 58);
     --gr1: rgb(1, 96, 58);
     --gr2: rgb(2, 176, 106);
+    --gr3: #40c9ff;
+    --gr4: #e81cff;
+    --gr5: #00ff87;
+    --gr6: #60efff;
+    --gr7: #0061ff;
+    --gr8: #60efff;
     --color: #fefbff;
 }
 
 body {
-    background: linear-gradient(var(--bgColor), var(--gr1), var(--gr2),
-            var(--gr1));
+    min-height: calc(100vh - 50px);
+    background: linear-gradient(var(--gr5), var(--gr6)) no-repeat;
     color: var(--color);
 }
 
 .slider {
     margin: 50px auto;
     width: 90vw;
-    height: 80vh;
+    height: clamp(25vh, 70vw, 80vh);
 
 }
 
@@ -45,10 +52,10 @@ body {
     align-items: center;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
+
     transition: .4s linear;
     cursor: grab;
-    border-radius: 10px;
+
 
 }
 
@@ -68,33 +75,34 @@ body {
     align-items: center;
     position: relative;
     overflow: hidden;
-    /* background: radial-gradient(var(--gr1), var(--gr2), var(--gr1)); */
+    border-radius: 10px;
 }
 
 .sliderImg {
+    width: 100%;
     height: 100%;
     align-self: start;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .btn {
-    width: 50px;
-    height: 50px;
+    width: clamp(25px, 10vw, 50px);
+    height: clamp(25px, 10vw, 50px);
+    font-size: clamp(14px, 5vw, 30px);
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.7em;
     font-weight: bold;
-    background-image: linear-gradient(90deg, rgb(19, 17, 23), rgba(57, 1, 226, 1));
+    background-image: linear-gradient(90deg, var(--gr7), var(--gr8));
     background-size: 200%;
     color: #d4d4d4;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     cursor: pointer;
     position: absolute;
     transition: .2s linear;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, .5);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
 }
 
 .btn:active {
@@ -123,12 +131,13 @@ body {
 
 .sliderCount {
     justify-self: center;
-    background: rgb(21, 0, 143);
-    padding: 10px;
+    background-image: linear-gradient(0deg, var(--gr7), var(--gr8));
+    padding: clamp(5px, 1vw, 10px);
     margin: 2px;
     border-radius: 5px;
     position: absolute;
     right: 10px;
     top: 10px;
     z-index: 1;
+    font-size: clamp(12px, 5vw, 18px);
 }
